fixed navbar / aligned data

--- a/src/styles/NavBar.scss
+++ b/src/styles/NavBar.scss
@@ -16,8 +16,10 @@
     margin-top: 30px;
   }
 
-  a{
+  .link{
     @include linkStyle($color1, $color4);
+    position: relative;
+    top: 20px;
     padding: 10px;
     margin: 10px;
   }
